--- a/Web_App/kanDostum_Web/index.html
+++ b/Web_App/kanDostum_Web/index.html
@@ -8,29 +8,30 @@
     <body>
         <header>
             <img class="logo" src="/features/kndstm_bckg.png" alt="KanDostum">
-            <h2>Kan Dostum Web Uygulamasına Hoşgeldiniz!</h2>
-            <p>Kan Dostum uygulamasını kullanan ile tüm donörlere ulaşabilirsiniz.</p>
-            <p>Her gün 38.000'den fazla bağışa ihtiyaç var.</p>
-            <p>Kan bağışı yapmak sağlığınız açısından da önem arz etmektedir.</p>
-            <a style="text-decoration: none" href="/features/knuygunluk_index.html"><p>Kime Kan Verebilirim ? Öğrenmek için tıkla.</p></a>
-            <button>Bağış/Talep</button>
+            <h2>Welcome to Kan Dostum Web Application!</h2>
+            <p>You can reach all donors by using the Kan Dostum application..</p>
+            <p>More than 38,000 donations needed every day.</p>
+            <p>Donating blood is also important for your health..</p>
+            <a style="text-decoration: none" href="/features/knuygunluk_index.html"><p>Who Can I Give Blood? Click to learn.</p></a>
+            <button>Donation/Request</button>
         </header>
         
         <section class="form hide">
-            <h2>Bağışçı olarak katkıda bulunun veya Talep edin</h2>
+            <h2>Contribute or Request as a Donor</h2>
             <form action="/" method="POST">
-                <input type="text" name="adsoyad" placeholder="Adınız ve Soyadınız">
+                <input type="text" name="adsoyad" placeholder="Name and Surname">
                 <input type="text" name="email" placeholder="Email">
-                <input type="text" name="telNu" placeholder="Telefon Numarası">
-                <input type="text" name="kanG" placeholder="Kan Grubunuz">
-                <input type="text" name="varsaMesaj" placeholder="Varsa Mesajınız">
-                <button>Bağışta bulun veya Talep et</button>
+                <input type="text" name="telNu" placeholder="Phone number">
+                <input type="text" name="kanG" placeholder="Blood Type">
+                <input type="text" name="varsaMesaj" placeholder="If you have a message">
+                <button>Donate or Claim</button>
             </form>
         </section>
 
         <main>
-       <h2>Kan Dostum <a style="text-decoration: none" href=" "><span>Uygulamayı İndir</span></a></h2>
-       <p>Uygulamayı indirin tüm <span>kan,plazma ve trombosit</span> bağışlarını görüntüleyin , talep edin veya bağışlayın.</p>
+       <h2>Kan Dostum <a style="text-decoration: none" href=" "><span>Download the App</span></a></h2>
+       <!--<p>Uygulamayı indirin tüm <span>kan,plazma ve trombosit</span> bağışlarını görüntüleyin , talep edin veya bağışlayın.</p>-->                                
+       <p>Download the app, view, request or donate all <span>blood, plasma and platelet</span> donations.</p>
           <!--        <section class="donors">
 
                 {%for donor in donors%}
@@ -44,7 +45,7 @@
 
             </section> -->
         </main>
-        <footer> Kan Hayattır. Kan Dostumla Vardır.</footer>  
+        <footer> Blood is Life. With Kan Dostum.</footer>  
 
     <script src="/features/script.js"></script>
     </body>
