--- a/Web_App/kanDostum_Web/features/knuygunluk_index.html
+++ b/Web_App/kanDostum_Web/features/knuygunluk_index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kime Kan Verebilirim?</title>
+  <title>Who Can I Give Blood?</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css'>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;display=swap'><link rel="stylesheet" href="/features/knuygunluk_style.css">
@@ -12,10 +12,10 @@
 <body>
 <!-- partial:index.partial.html -->
 <div id="about">
-    <button id="geri_don" onclick="geri_don_ana()" class="button" >Geri Dön</button>
+    <button id="geri_don" onclick="geri_don_ana()" class="button" >Turn back</button>
 </div>
 <div id="content">
-  <h3>Kan Grubunuzu Seçiniz:</h3>
+  <h3>Choose Your Blood Type:</h3>
   <div id="blood_selector">
     <div>O−</div>
     <div>O+</div>
