--- a/Web_App/kanDostum_Web/features/tesekkürler.html
+++ b/Web_App/kanDostum_Web/features/tesekkürler.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teşekkürler </title>
+    <title>Thanks</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -18,16 +18,16 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-md-6 col-10 thankpage">
-                <h1>Bağış İçin Teşekkürler!</h1>
-                <p>Kan istek veya talebi alındı. Teşekkürler!</p>
-                <a href="http://localhost:5000/" class="button"><button>Geri Dön</button></a>
+                <h1>Thanks for donation!</h1>
+                <p>Your blood request has been received. Thanks!</p>
+                <a href="http://localhost:5000/" class="button"><button>Back</button></a>
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row justify-content-center footer">
             <div class="col-md-6 col-10">
-                <p >Kan Hayattır. Kan Dostumla Vardır. &#169; 2021</p>
+                <p >Blood Is Life. With Kan Dostum. &#169; 2021</p>
             </div>
         </div>
     </div>
