--- a/Web_App/kanDostum_Web/features/knuygunluk_index.html
+++ b/Web_App/kanDostum_Web/features/knuygunluk_index.html
@@ -12,7 +12,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div id="about">
-    <button id="geri_don" onclick="geri_don_ana()" class="button" >Turn back</button>
+    <button id="geri_don" onclick="geri_don_ana()" class="button" >Back</button>
 </div>
 <div id="content">
   <h3>Choose Your Blood Type:</h3>
