--- a/Web_App/kanDostum_Web/index.html
+++ b/Web_App/kanDostum_Web/index.html
@@ -45,7 +45,7 @@
 
             </section> -->
         </main>
-        <footer> Blood is Life. With Kan Dostum.</footer>  
+        <footer> Blood Is Life. With Kan Dostum.</footer>  
 
     <script src="/features/script.js"></script>
     </body>
